k8s/manifest/gateway-api-backup.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      meta.helm.sh/release-name: cilium
      meta.helm.sh/release-namespace: kube-system
    creationTimestamp: "2026-04-05T10:19:29Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    name: cilium
    resourceVersion: "21843468"
    uid: 0343db2d-6d72-43d8-b1d3-abfe5ea19ff3
  spec:
    controllerName: io.cilium/gateway-controller
    description: The default Cilium GatewayClass
  status:
    conditions:
    - lastTransitionTime: "2026-04-05T11:06:18Z"
      message: Valid GatewayClass
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    supportedFeatures:
    - name: BackendTLSPolicySANValidation
    - name: GRPCRoute
    - name: GRPCRouteNamedRouteRule
    - name: Gateway
    - name: GatewayAddressEmpty
    - name: GatewayHTTPListenerIsolation
    - name: GatewayInfrastructurePropagation
    - name: GatewayPort8080
    - name: GatewayStaticAddresses
    - name: HTTPRoute
    - name: HTTPRouteBackendProtocolH2C
    - name: HTTPRouteBackendProtocolWebSocket
    - name: HTTPRouteBackendRequestHeaderModification
    - name: HTTPRouteBackendTimeout
    - name: HTTPRouteDestinationPortMatching
    - name: HTTPRouteHostRewrite
    - name: HTTPRouteMethodMatching
    - name: HTTPRouteNamedRouteRule
    - name: HTTPRoutePathRedirect
    - name: HTTPRoutePathRewrite
    - name: HTTPRoutePortRedirect
    - name: HTTPRouteQueryParamMatching
    - name: HTTPRouteRequestMirror
    - name: HTTPRouteRequestMultipleMirrors
    - name: HTTPRouteRequestPercentageMirror
    - name: HTTPRouteRequestTimeout
    - name: HTTPRouteResponseHeaderModification
    - name: HTTPRouteSchemeRedirect
    - name: Mesh
    - name: MeshClusterIPMatching
    - name: MeshHTTPRouteBackendRequestHeaderModification
    - name: MeshHTTPRouteNamedRouteRule
    - name: MeshHTTPRouteQueryParamMatching
    - name: MeshHTTPRouteRedirectPath
    - name: MeshHTTPRouteRedirectPort
    - name: MeshHTTPRouteRewritePath
    - name: MeshHTTPRouteSchemeRedirect
    - name: ReferenceGrant
    - name: TLSRoute
kind: List
metadata:
  resourceVersion: ""
